# mudpy

./: .gitignore  MANIFEST.in  README.md  meson.build  mud_gen.c  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
mud_src/: meson.build  mud.c  mud.h  mud_all.c  mud_encode.c  mud_fort.c  mud_friendly.c  mud_gen.c  mud_misc.c  mud_new.c  mud_tri_ti.c
mudpy/: __init__.py  containers.py  global_variables.py  mcomment.py  mcontainer.py  mdata.py  mdict.py  meson.build  mhist.py  mlist.py  mscaler.py  mud_friendly.pyx  mud_friendly_wrapper.pyx  mvar.py
test/: test_mud_friendly_read.py
