[build-system]
requires = [
    "setuptools==59.2.0",
    "wheel>=0.34",
    "Cython>=0.28",
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "mud-py"
authors  = [{name="Derek Fujimoto", email="dfujimoto@triumf.ca" }]
description = "MUon Data file reader"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Cython",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 5 - Production/Stable",
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    'numpy>=1.19',
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/dfujim/mudpy"
"Bug Tracker" = "https://github.com/dfujim/mudpy/issues"

# set version
[tool.hatch.version]
path = 'mudpy/global_variables.py'