[build-system]
requires = [
    "setuptools==59.2.0",
    "wheel>=0.34",
    "Cython>=0.28",
    "numpy>=1.19",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mudpy*"]

# set version
[tool.setuptools.dynamic]
version = {attr = 'mudpy.__version__'}