[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "Cython>=0.3",
    "numpy>=1.19",
]

[project]
name = "mud-py"
authors  = [{name="Derek Fujimoto", email="dfujimoto@triumf.ca" }]
version = '1.3.0'
description = "MUon Data file reader"
readme = "README.md"
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
        "Development Status :: 5 - Production/Stable",
]
license = {file = "LICENSE"}
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/dfujim/mudpy"
"Bug Tracker" = "https://github.com/dfujim/mudpy/issues"